--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -29,6 +29,12 @@
     </dependencies>
 
     <build>
+        <resources>
+          <resource>
+            <directory>src/main/java</directory>
+            <excludes><exclude>**/*.java</exclude></excludes>
+          </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
